# crabster_analysis

./: .gitignore  .gitmodules  Analysis.py  BodyClass.py  Simulation.py  Utils.py  Y_vector.py  analysis.py  compare_plot.py  data_con.py  data_container.py  globals.py  main.py  read_FL.py  read_FR.py  read_ML.py  read_MR.py  read_RL.py  read_RR.py  read_base.py  read_data.py  rec_data.csv  sim_data.csv  sim_info.py  sub_analysis.py  subsystem_analysis.py  utils.py
c++/: CMakeLists.txt  README.md  sim_data.csv
c++/data/: rec_data_fix_free_fall.csv  ref_data_fix_free_fall.csv  sim_data.csv
c++/include/: basebody.h  simulation.h  subsystem.h  utils.h
c++/plot/: result_plot.py
c++/qt/: qt.pro
c++/qt/build_debug/: sim_data.csv
c++/src/: basebody.cpp  main.cpp  simulation.cpp  subsystem.cpp
matlab/: Y2qdq.m  absh3.m  analysis.m  ang2mat.m  data_save.m  define_Y_vector.m  dqddq2Yp.m  joint_motion.m  main.m  mat2rpy.m  mat_data.txt  mat_data_FL.txt  mat_data_FR.txt  mat_data_ML.txt  mat_data_MR.txt  mat_data_RL.txt  mat_data_RR.txt  plotting.m  read_FL.m  read_FR.m  read_L_body1.m  read_L_body2.m  read_L_body3.m  read_L_body4.m  read_ML.m  read_MR.m  read_RL.m  read_RR.m  read_R_body1.m  read_R_body2.m  read_R_body3.m  read_R_body4.m  read_base.m  read_data.m  sub_acceleration_analysis.m  sub_mass_force_analysis.m  sub_position_analysis.m  sub_velocity_analysis.m  tilde.m
python/: analysis.py  body.py  main.py  read_FL.py  read_FR.py  read_ML.py  read_MR.py  read_RL.py  read_RR.py  read_base.py  result_plot.py  sim.py  sub_analysis.py  utils.py
